27 May 2004
Applied patch by Paul Bridger that solves a problem on windows regarding 
spaces on paths. Thanks Paul!

Applied another patch that fixes the module name if pyste is run from
another directory of where the .pyste file is located. Patch contributted 
by Paul Bridger.

17 May 2004
Applied a patch by Roman Yakovenko that makes the export of unnamed enums
better. Thanks Roman!

23 October 2003
Fixed bug where a class would appear more than one in the generated code.

6 October 2003
Fixed bug reported by Niall Douglas (using his patch) about UniqueInt not
appearing correctly with --multiple.

Added precompiled header support on windows systems (using #pragma hdrstop).
Suggested by Niall Douglas.

Fixed a bug with -I directive and AllFromHeader. Reported by Scott Snyder.

4 October 2003
Added return_self, thanks for Niall Douglas for pointing out that it was
missing.

Added --file-list, where you can pass a file where the pyste files are listed
one per line. Also suggested by Niall Douglas.

Documentation has been finally updated, after a long wait. Please let me know
if you spot any mistake!

2 October 2003
Scott Snyder found a typo in ClassExporter that prevented -= and *= operators
from being exported. Thanks Scott!

20 September 2003
Added return_by_value in the list of policies supported. Thanks to Niall
Douglas for the remainder.

19 September 2003
Better support for unnamed enums, plus they are by default exported to the
parent's namespace. Normal enums can have the same behaviour using the function
export_values on the Enum object. Feature requested by Niall Douglas.

10 September 2003
A new variable is accessible in the Pyste files: INTERFACE_FILE contains the 
full path of the pyste file.

4 September 2003
Now it is possible to override protected and private pure virtual functions
in Python, as requested by Roman Yakovenko.

23 August 2003
Fixed bug where some Imports where not writing their include files.  